testing classes simplified